--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -6,6 +6,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    background-color: #F0F1F1;
+}
+
 .container-main {
     min-height: 100vh;
     display: flex;
@@ -22,7 +26,7 @@
     justify-content: space-around;
     width: 390px;
     height: 550px;
-    border-radius: 25px 25px 110px 25px;
+    border-radius: 20px 20px 110px 20px;
 }
 
 .form-container {
@@ -90,6 +94,10 @@
     border: 1px solid black;
 }
 
+.input-container input:hover {
+    cursor: pointer;
+}
+
 .second-container {
     display: flex;
     justify-content: center;
@@ -108,6 +116,11 @@ img {
     border-radius: 50%;
     width: 30px;
     height: 30px;
+}
+
+img:hover {
+    background-color: black;
+    cursor: pointer;
 }
 
 .div-bar {
@@ -132,3 +145,80 @@ img {
     color: #874CFE;
     
 }
+
+@media (min-width: 500px) {
+
+    .firts-container {
+        width: 650px;
+        height: 500;
+    }
+    
+
+    .validation-container {
+        display: grid;
+        grid-template-columns: repeat(3, 80px);
+        gap: 70px;
+        margin-left: 30px;
+        margin-top: 100px;
+        margin-left: 45px;
+    
+    }
+
+    .second-container {
+        margin-top: -30px;
+    }
+
+    .input-container input {
+        width: 110px;
+    }
+
+    .input-container .errorInput {
+        width: 110px;
+    }
+
+    .div-1 {
+        width: 75%;
+    }
+
+    .div-2 {
+        width: 0;
+    }
+
+    .third-container {
+        display: flex;
+        flex-direction: column;
+        font-weight: 800;
+        font-style: italic;
+        margin-bottom: 90px;
+        margin-left: 45px;
+    }
+
+    .third-container span {
+        font-size: 4em;
+        margin-left: 10px;
+    }
+
+}
+
+@media (max-width: 390px) {
+    
+    .firts-container {
+        width: 345px;
+    }
+
+    .validation-container {
+        display: grid;
+        grid-template-columns: repeat(3, 80px);
+        gap: 30px;
+        margin-left: 12px;
+        margin-top: 40px;
+    
+    }
+
+    .div-bar {
+        border-bottom: 1px solid #E2E3E2;
+        width: 115px;
+    }
+
+}
+
